--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   },
   "homepage": "https://github.com/pixelplush/assets#readme",
   "dependencies": {
+    "comfysheets": "^1.0.1",
+    "dotenv": "^10.0.0",
+    "node-fetch": "^3.1.0",
     "webwebweb": "^1.4.10"
   }
 }
