--- a/.github/workflows/assets.yml
+++ b/.github/workflows/assets.yml
@@ -22,6 +22,8 @@ jobs:
         soft_fail: true
     # Create Assets Branch
     - uses: peterjgrainger/action-create-branch@v2.0.1
+      env:
+        GITHUB_TOKEN: ${{github.token}}
       with:
         # The branch to create
         branch: assets
